# nn-test

./: .gitignore  CMakeLists.txt  Makefile
doc/: Makefile  nn.tex
script/: plot.py
src/: functions.cpp  functions.hpp  layer.hpp  main.cpp  math.cpp  math.hpp  matrix.cpp  matrix.hpp  minibatch_generator.hpp  model.cpp  model.hpp  tracer.hpp  trainer.cpp  trainer.hpp  types.hpp
src/mnist/: minist_loader.hpp
